# $Id$

Griffith ChangeLog
------------------
(c) 2005-2007  Vasco Nunes, Piotr Ożarowski

2007-06-29  Piotr Ożarowski
	* Added Greek translation (thanka to Ioannis Koniaris)
	* Added Simplified Chinese translation (thanks to kempson)
	* Updated German, Spanish, French and Portuguese Brazilian translations (from Rosetta)
	* Updated Polish translations
	* Do not register mime type in .desktop file

2007-06-29  Vasco Nunes
	* 7arte.net and Cineteka movie plugins updated

2007-06-29  Piotr Ożarowski
	* IMDb movie plugin updated

2007-06-27  Michael Jahn
	* Kino.de movie plugin updated
	* DVD-Palace movie plugin added

2007-06-25  Vasco Nunes
	* Added Danish translation (thanks to Joe Dalton)

2007-06-20  Piotr Ożarowski
	* Filmweb, WP and FDb movie plugins updated

2007-06-20  Michael Jahn
	* fixed bug #11103: windows are not "on top"
	* fixed bug #11088: Clone doesn't produce a new entry
	* added script for database creation under Microsoft SQL Server (README)

2007-06-19  Vasco Nunes
	* Portuguese translation updated
	* winsetup script updated

2007-06-19  Piotr Ożarowski
	* Polish translation updated

2007-06-17  Piotr Ożarowski
	* Change "report bug" link in about menu
	* Minor bug fixes

2007-06-13  Piotr Ożarowski
	* Add sections to config file

2007-06-09  Vasco Nunes
	* Added new alpha export plugin for iPods.
	  Exports directly to iPod on macosx for now, saves files in custom location on other platforms.
	  Not handling 4Kb iPod notes limit yet.

2007-05-31  Piotr Ożarowski
	* IMDB, IMDB-de and KinoDe movie plugins updated (thanks to Michael Jahn)
	* Resizable columns in add movie window's languages tab (thanks to Michael Jahn)
	* Increase runtime maximum value (thanks to Michael Jahn)
	* Add Microsoft SQL support (thanks to Michael Jahn)

2007-05-22  Piotr Ożarowski
	* Minor fix in dbupgrade.py

2007-05-19  Vasco Nunes
	* French translation updated (thanks to Guillaume Pratte)
	* IMDB plugin rating fix (thanks to babelfish)