@@ -4,6 +4,11 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2007  Vasco Nunes, Piotr Ożarowski
 
+2007-06-30  Piotr Ożarowski
+	* Use python2.5's sqlite3 module if available (no need to install pysqlite2)
+	* Check dependencies at startup
+	* Detect old config while restoring data
+
 2007-06-29  Piotr Ożarowski
 	* Added Greek translation (thanka to Ioannis Koniaris)
 	* Added Simplified Chinese translation (thanks to kempson)
